# sndrsn.com

./: .gitignore  eleventy.config.js  netlify.toml  package.json
.kiro/specs/ephemeral-audio-decay/: design.md  requirements.md  tasks.md
ephemeral-audio/: .env.example  .gitignore  README.md  app.py  create_test_audio.py  degradation.py  lock_manager.py  metadata.py  pyproject.toml  render.yaml  streaming.py  streaming_readonly.py  wav_handler.py
ephemeral-audio/examples/: README.md  basic-player.html  howler-player.html  tone-player.html
ephemeral-audio/tests/: README.md  __init__.py  test_api.py  test_degradation.py  test_metadata.py
src/: index.njk
src/_11ty/: collections.js  filters.js
src/_data/: env.js  metadata.js
src/_includes/: postlist.njk
src/_layouts/: base.njk  base_2.njk  post.njk
src/assets/css/: ephemeral-audio.css  styles.css
src/content/: _redirects  ephemeral-audio.njk  index.njk  portfolio.njk  posts.njk  robots.txt  sitemap.njk
src/content/about/: index.md  index.njk
src/content/contact/: index.njk  thanks.njk
src/content/posts/: 01.md  2023-02-23.md  2023-04-29.md  2023-11-01.md  2025-02-06.md  index.njk
src/posts/: 01.md  test.md
